--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
-    "serverless-http": "^3.2.0",
-    "terser-webpack-plugin": "^1.4.4"
+    "serverless-http": "^3.2.0"
   }
 }
