--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
  functions = "functions"
- command = "npm run build"
+ command = "./node_modules/.bin/netlify-lambda build src"
 [[redirects]]
  from = "/api/*"
  to = "/.netlify/functions/:splat"
